[gd_scene load_steps=5 format=3 uid="uid://qpltb1ps8n5k"]

[ext_resource type="Script" uid="uid://bngnptx11krag" path="res://GameScenes/animals/animal.gd" id="1_jauc8"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_jauc8"]
height = 0.91333
radius = 1.36133

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_oa88r"]
height = 2.00082

[sub_resource type="CapsuleMesh" id="CapsuleMesh_jauc8"]

[node name="Animal" type="CharacterBody3D"]
collision_layer = 129
collision_mask = 128
script = ExtResource("1_jauc8")

[node name="MonsterDetectionArea" type="Area3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="MonsterDetectionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0389404, 0)
shape = SubResource("CylinderShape3D_jauc8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CapsuleShape3D_oa88r")

[node name="Cuerpo" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CapsuleMesh_jauc8")

[node name="Izquierdo" type="MeshInstance3D" parent="."]
transform = Transform3D(-8.74228e-09, -0.2, 0, 0.2, -8.74228e-09, 0, 0, 0, 0.2, -0.8, 0.2, -0.15)
mesh = SubResource("CapsuleMesh_jauc8")

[node name="Derecho" type="MeshInstance3D" parent="."]
transform = Transform3D(-8.74228e-09, -0.2, 0, 0.2, -8.74228e-09, 0, 0, 0, 0.2, -0.8, 0.2, 0.15)
mesh = SubResource("CapsuleMesh_jauc8")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="EatingTimer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="MonsterDetectionArea" to="." method="_on_monster_detection_area_body_entered"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_wander_timer_timeout"]
[connection signal="timeout" from="EatingTimer" to="." method="_on_eating_timer_timeout"]
